--- a/ABM.Paie/Layout/MainFooter.razor
+++ b/ABM.Paie/Layout/MainFooter.razor
@@ -3,7 +3,7 @@
 @using ABM.Paie.Pages
 @using ABM.Paie.Resources
 
-<div class="d-flex flex-wrap justify-center" style="padding:20px 0px;max-width:1000px;">
+<div class="d-flex flex-wrap justify-center" id="footer" style="padding:20px 0px;max-width:1000px;">
     <div style="padding:20px;width:400px;">
         <MudButton Class="white-text" Variant="Variant.Text" Href="/">
             <MudText Typo="Typo.h5">
