--- a/ABM.Paie/Layout/MainHeader.razor
+++ b/ABM.Paie/Layout/MainHeader.razor
@@ -50,7 +50,7 @@
 	var partenariatItems = new MenuButton[] { new("Facilae Paie", "https://www.facilaepaie.com", true) };
 }
 
-<div>
+<div id="header">
 	<HeaderMenu Activator="accueilActivator" />
 	<HeaderMenu Activator="formationActivator" Items="formationItems" />
 	<HeaderMenu Activator="actualiteActivator" />
